Sauce labs test improvements

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
     </a>
   </div>
   <div class="right">
-    <span class="app-title">{{title}}</span>
+    <span id="app-title" class="app-title">{{title}}</span>
   </div>
 </div>
 <div class="content">
@@ -18,5 +18,5 @@
   <p><a href="/applications/1234">/applications/1234</a> <span class="description"><strong>GET</strong> request to /applications/ with a path parameter of '1234' to get a specific application</span></p>
   <br />
   <br />
-  <p><a href="/docs">Browse the Swagger UI</a></p>
+  <p><a id="api-url" href="/docs">Browse the Swagger UI</a></p>
 </div>
